@@ -527,6 +527,7 @@ class ChangesetFilesTroveSource(SearchableTroveSource):
         self.rooted = {}
         self.idMap = {}
         self.storeDeps = storeDeps
+        self._troveCache = {}
 
         if storeDeps:
             self.depDb = deptable.DependencyDatabase()
@@ -650,6 +651,9 @@ class ChangesetFilesTroveSource(SearchableTroveSource):
             if info not in self.troveCsMap:
                 retList.append(None)
                 continue
+            if info in self._troveCache:
+                retList.append(self._troveCache[info])
+                continue
 
             trvCs = self.troveCsMap[info].getNewTroveVersion(*info)
             if trvCs.getOldVersion() is None:
@@ -667,6 +671,7 @@ class ChangesetFilesTroveSource(SearchableTroveSource):
                 newTrove.applyChangeSet(trvCs,
                                         skipFiles = not withFiles,
                                         skipIntegrityChecks = not withFiles)
+            self._troveCache[info] = newTrove
             retList.append(newTrove)
 
         return retList
